Revision history for Getopt-Long

{{$NEXT}}

0.1.3  2019-10-09T21:38:41+02:00
    - Parse explicit parameter formats early
    - Don't allow proto subs to be pre-parsed
    - Only throw Getopt::Long::Exceptionals

0.1.2  2019-06-08T15:32:25+02:00
    - Add support for Complex parameters
    - Make f format Num instead of Real

0.1.1  2019-05-26T15:11:45+02:00
    - Add support for Real parameters
    - Add getopt sub trait
    - Eliminate the extended integer parsing type

0.1.0  2019-02-03T01:43:46+01:00
    - Eliminate Capture in pair syntax
    - Add compound inference to pair syntax

0.0.3  2019-01-26T21:15:05+01:00
    - Added pair syntax
    - Implemented new perl6.d getopt hooks