@@ -1,6 +1,7 @@
 Revision history for Getopt-Long
 
 {{$NEXT}}
+    - Add compat-single option
 
 0.1.3  2019-10-09T21:38:41+02:00
     - Parse explicit parameter formats early
